# ipbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  LICENSE  README.md  Taskfile.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  renovate.json
.claude/: settings.local.json
.github/workflows/: ci-docker-publish.yml  pr-checks.yml
doc/: 0. design_draft.md  1. execution_plan.md  2. fercher_resilience_improvement  CONTRIBUTION.md  DEPLOYMENT.md  RELEASE.md
docker/: Dockerfile
src/ipbot/: __init__.py  bot.py  config.py  factory.py  formatter.py  logger.py  main.py  orchestrator.py  result.py
src/ipbot/fetchers/: __init__.py  base.py  custom.py  exceptions.py  http_fetcher.py  identme.py  ifconfig.py  ipify.py  ipinfo.py
tests/: test_bot.py  test_config.py  test_factory.py  test_fetchers.py  test_formatter.py  test_main.py  test_orchestrator.py
